--- a/style.css
+++ b/style.css
@@ -14,7 +14,8 @@
   --font-size-1: 1rem; /* 16px */
   --font-size-2: 1.25rem; /* 20px */
   --font-size-3: 1.75rem; /* 28px */
-  --font-size-4: 2.5rem; /* 40px */
+  --font-size-4: 2.25rem; /* 36px */
+  --font-size-5: 2.5rem; /* 40px */
 
   --line-height-1: 100%;
   --line-height-2: 150%;
@@ -128,3 +129,61 @@ h2 {
 }
 
 /* --------------------- Main stylings --------------------- */
+body {
+  display: flex;
+  justify-content: center;
+  background-color: var(--color-secondary-1);
+  font-family: "Outfit";
+  color: var(--color-neutral-3);
+  font-size: var(--font-size-1);
+  line-height: var(--line-height-2);
+}
+
+article {
+  max-width: 23.4375rem; /* 375px */
+  background-color: var(--color-neutral-1);
+
+  .content {
+    padding: var(--spacing-500) var(--spacing-400);
+    display: flex;
+    flex-direction: column;
+    gap: var(--spacing-400);
+  }
+
+  section {
+    display: flex;
+    flex-direction: column;
+    gap: var(--spacing-300);
+  }
+}
+
+.special-note {
+  display: flex;
+  flex-direction: column;
+  gap: var(--spacing-200);
+  padding: var(--spacing-300);
+  background-color: var(--color-primary-2);
+  border-radius: var(--border-radius-soft);
+
+  h2 {
+    font-family: "Outfit";
+    color: var(--color-primary-1);
+    font-size: var(--font-size-2);
+    font-weight: var(--font-weight-semi-bold);
+    line-height: var(--line-height-1);
+  }
+}
+
+h1 {
+  font-family: "YoungSerif";
+  color: var(--color-neutral-2);
+  font-size: var(--font-size-4);
+  line-height: var(--line-height-1);
+}
+
+h2 {
+  font-family: "YoungSerif";
+  color: var(--color-secondary-2);
+  font-size: var(--font-size-3);
+  line-height: var(--line-height-1);
+}
