--- a/style.css
+++ b/style.css
@@ -172,10 +172,15 @@ article {
     font-weight: var(--font-weight-semi-bold);
     line-height: var(--line-height-1);
   }
+
+  ::marker {
+    color: var(--color-primary-1);
+  }
 }
 
 h1 {
   font-family: "YoungSerif";
+  font-weight: var(--font-weight-regular);
   color: var(--color-neutral-2);
   font-size: var(--font-size-4);
   line-height: var(--line-height-1);
@@ -183,7 +188,20 @@ h1 {
 
 h2 {
   font-family: "YoungSerif";
+  font-weight: var(--font-weight-regular);
   color: var(--color-secondary-2);
   font-size: var(--font-size-3);
   line-height: var(--line-height-1);
+}
+
+ul,
+ol {
+  display: flex;
+  flex-direction: column;
+  gap: var(--spacing-100);
+}
+
+::marker {
+  color: var(--color-secondary-2);
+  font-weight: var(--font-weight-bold);
 }
