--- a/style.css
+++ b/style.css
@@ -41,7 +41,8 @@
   --border-radius-softer: 1.5rem; /* 24px */
 
   /* Border width */
-  --border-width-1: 0.0625rem; /* 1px */
+  --border-width-1: 0.03125rem; /* 0.5px */
+  --border-width-2: 0.0625rem; /* 1px */
 }
 
 @font-face {
@@ -126,7 +127,6 @@ p {
 h1,
 h2 {
   line-height: 1.1;
-  text-wrap: balance;
 }
 
 /* --------------------- Main stylings --------------------- */
@@ -210,6 +210,7 @@ ol {
   display: flex;
   flex-direction: column;
   gap: var(--spacing-100);
+  padding-inline-start: var(--spacing-300);
 }
 
 ::marker {
@@ -217,9 +218,17 @@ ol {
   font-weight: var(--font-weight-bold);
 }
 
+li {
+  padding-left: var(--spacing-200);
+}
+
+hr {
+  border: var(--border-width-1) solid var(--color-neutral-4);
+}
+
 tr {
   display: flex;
-  border-bottom: var(--border-width-1) solid var(--color-neutral-4);
+  border-bottom: var(--border-width-2) solid var(--color-neutral-4);
   gap: var(--spacing-200);
 }
 
