--- a/style.css
+++ b/style.css
@@ -56,7 +56,7 @@
 
 @font-face {
   font-family: "Outfit";
-  src: url("/assets/fonts/outfit/static/Outfit-Regular.ttf") format("truetype");
+  src: url("./assets/fonts/outfit/static/Outfit-Regular.ttf") format("truetype");
   font-style: normal;
   font-weight: 400;
   font-display: swap;
