--- a/style.css
+++ b/style.css
@@ -176,7 +176,8 @@ article {
   background-color: var(--color-primary-2);
   border-radius: var(--border-radius-soft);
 
-  h2 {
+  h2,
+  div {
     font-family: "Outfit";
     color: var(--color-primary-1);
     font-size: var(--font-size-2);
