--- a/style.css
+++ b/style.css
@@ -276,10 +276,8 @@ td:nth-child(2) {
 
     img {
       border-radius: var(--border-radius-soft);
-      /* width: 100%;
-      height: auto; */
-      width: 33.5rem; /* 536px */
-      height: 18.75rem; /* 300px */
+      width: 100%;
+      height: auto;
     }
   }
 
@@ -291,10 +289,5 @@ td:nth-child(2) {
 @media (min-width: 80rem) {
   article {
     max-width: 46rem; /* 736px */
-
-    img {
-      width: 41rem; /* 656px */
-      height: 18.75rem; /* 300px */
-    }
   }
 }
