--- a/style.css
+++ b/style.css
@@ -184,7 +184,7 @@ article {
     line-height: var(--line-height-1);
   }
 
-  ::marker {
+  li:before {
     color: var(--color-primary-1);
   }
 }
@@ -210,24 +210,22 @@ ol {
   display: flex;
   flex-direction: column;
   gap: var(--spacing-100);
-  padding-inline-start: var(--spacing-300);
+  padding-inline-start: var(--spacing-100);
 }
 
 ul {
-  /* li::marker {
-    font-size: xx-small;
-  } */
   list-style: none;
 
   li {
     display: flex;
-    gap: var(--spacing-200);
+    gap: var(--spacing-300);
     align-items: center;
   }
 
   li:before {
-    content: ".";
-    font-size: xx-large;
+    content: "•";
+    font-size: x-large;
+    color: var(--color-secondary-2);
   }
 }
 
@@ -236,9 +234,9 @@ ul {
   font-weight: var(--font-weight-bold);
 }
 
-li {
-  /* padding-left: var(--spacing-200); */
-}
+/* li {
+  padding-left: var(--spacing-200);
+} */
 
 hr {
   border: var(--border-width-1) solid var(--color-neutral-4);
